--- a/src/components/Parameter/Parameter.css
+++ b/src/components/Parameter/Parameter.css
@@ -1,8 +1,18 @@
 .parameter {
+  display: flex;
+  flex-direction: column;
 }
 
 .parameter-name {
+  font-size: 1.2rem;
+  line-height: 2.9rem;
+  color: #800101;
+  opacity: 0.8;
 }
 
 .parameter-value {
+  font-size: 1.6rem;
+  line-height: 2.9rem;
+  text-decoration-line: underline;
+  color: #800101;
 }
