--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,16 @@ h1 {
   margin: 0;
 }
 
+input {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+input:focus {
+  outline: none;
+}
+
 .flex-center-middle {
   display: flex;
   align-items: center;
