Store added, search and tab switcher scripts added, layout improvements

--- a/src/Market.css
+++ b/src/Market.css
@@ -4,3 +4,8 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.market__top-group {
+  display: flex;
+  flex-direction: column;
+}
