--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -8,7 +8,8 @@
   flex-direction: row;
   gap: 4.2rem;
   align-items: center;
-  justify-content: center;
+  padding: 0 1.3rem 0 5.2rem;
+  box-sizing: border-box;
 }
 
 .cart-item__image {
@@ -31,8 +32,9 @@
 .cart-item__content__bottom-group {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  gap: 4rem;
+  margin-left: 3rem;
 }
 
 .cart-item__parameter-container {
@@ -50,6 +52,7 @@
 }
 
 .cart-item__cost-container {
+  width: 24.8rem;
   display: flex;
   flex-direction: row;
   gap: 3.2rem;
