--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -4,12 +4,18 @@
   border: 1px solid #800101;
   box-shadow: 0 1rem 2rem rgba(128, 1, 1, 0.2);
   border-radius: 2rem;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 3rem 0 2.5rem;
   box-sizing: border-box;
+}
+
+.product-item__content-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product-item__top-group {
@@ -25,32 +31,42 @@
   line-height: 2.9rem;
   color: #800101;
   max-width: 27rem;
+  height: 5.8rem;
 }
 
 .product-item__mid-group {
   width: 25.5rem;
+  height: 26.5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .product-item__image {
-  width: 5.4rem;
+  padding: 0.7rem 0;
+  object-fit: contain;
+  object-position: center;
+  max-width: 10rem;
 }
 
 .product-item__parameter-container {
+  width: 14.6rem;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  justify-content: center;
+  gap: 2.5rem;
+  margin-top: -0.9rem;
 }
 
 .product-item__parameter-bottom-group {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   gap: 2rem;
 }
 
 .product-item__price {
+  width: 24.1rem;
   display: flex;
   flex-direction: row;
   gap: 2.9rem;
