cart functionality added

--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -55,7 +55,7 @@
   width: 24.8rem;
   display: flex;
   flex-direction: row;
-  gap: 3.2rem;
+  justify-content: space-between;
 }
 
 .cart-item__price {
