--- a/src/pages/CatalogPage/CatalogPage.css
+++ b/src/pages/CatalogPage/CatalogPage.css
@@ -1,8 +1,10 @@
 .catalog-container {
-  padding: 3rem 0;
+  margin: 3rem 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
 }
 
 .catalog {
@@ -12,4 +14,8 @@
   gap: 3rem;
   flex-wrap: wrap;
   margin-bottom: 6rem;
+}
+
+.main-page .catalog-container {
+  margin-top: 0;
 }
