--- a/src/pages/CartPage/CartPage.css
+++ b/src/pages/CartPage/CartPage.css
@@ -24,3 +24,10 @@
   flex-direction: column;
   gap: 4rem;
 }
+
+.cart-page__group {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  align-items: center;
+}
